# kaito-ai

./: .env.example  .gitignore  README.md  api.py  app.py  backend.py  config.py  plan.md  pyproject.toml  requirements.txt  utility.py
agent/: agent.py  search.py
database/: get_sql.py  memory.py
frontend/: app.js  index.html  style.css
rag/: agentic_rag.py
