[project]
name = "kaito-ai"
version = "1.0.0"
description = "AI-powered chatbot with web search and document analysis (RAG)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "python-multipart>=0.0.28",
    "langchain",
    "langgraph",
    "langchain-groq",
    "python-dotenv",
    "langgraph-checkpoint-sqlite",
    "langchain-tavily",
    "langchain-community",
    "langchain-chroma",
    "sentence-transformers",
    "tavily-python",
    "langchain-huggingface",
    "pypdf",
    "requests",
    # pysqlite3-binary is Linux-only (no Windows wheels)
    "pysqlite3-binary ; sys_platform == 'linux'",
    "rank-bm25>=0.2.2",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
